--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@devim-front/react-sentry",
   "version": "1.0.0",
-  "description": "Библиотека для интеграция приложения на React с Sentry.IO",
+  "description": "Библиотека для интеграции приложения на React с sentry.io",
   "main": "index.js",
   "scripts": {
     "build:drop": "rimraf build",
@@ -28,6 +28,7 @@
     "jsdom": "^16.2.2",
     "jsdom-global": "^3.0.2",
     "mocha": "^7.2.0",
+    "np": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
@@ -38,5 +39,13 @@
     "@sentry/browser": "^5.15.5",
     "@types/react": "^16.9.35",
     "react": "^16.13.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devim-front/react-sentry.git"
+  },
+  "bugs": {
+    "url": "https://github.com/devim-front/react-sentry/issues"
+  },
+  "homepage": "https://github.com/devim-front/react-sentry#readme"
 }
