--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
+  "types": "./build/index.d.ts",
   "scripts": {
     "build:drop": "rimraf build",
     "build:make": "tsc",
@@ -29,19 +30,17 @@
   "author": "gleb-mikhalkov",
   "license": "ISC",
   "devDependencies": {
+    "@devim-front/service": "^2.0.0",
     "@types/chai": "^4.2.11",
-    "@types/jsdom": "^16.2.3",
     "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
     "husky": "^4.2.5",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "^3.0.2",
     "mocha": "^7.2.0",
     "np": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "typedoc": "^0.17.7",
     "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.9.3"
